--- a/.github/workflows/dependabot.yml
+++ b/.github/workflows/dependabot.yml
@@ -8,24 +8,12 @@ jobs:
   notify:
     runs-on: ubuntu-latest
     steps:
-      - name: Checkout code
-        uses: actions/checkout@v2
-      - name: Setup Java
-        uses: actions/setup-java@v1
+      - name: Microsoft Teams Webhook Notifications
+        # You may pin to the exact commit or the version.
+        # uses: dhollerbach/actions.send-message-to-ms-teams@667c1f3776261f1c7fe6be7e582f7e124bffee49
+        uses: dhollerbach/actions.send-message-to-ms-teams@1.0.10
         with:
-          java-version: 11
-      - name: Build project
-        run: mvn package
-      - name: Notify Slack
-        uses: rtCamp/action-slack-notify@master
-        env:
-          SLACK_WEBHOOK: ${{ secrets.SLACK_WEBHOOK_URL }}
-        with:
-          status: ${{ job.status }}
-          message: "Pull request generated for dependency updates"
-          author_name: ${{ github.event.pull_request.user.login }}
-          author_icon: ${{ github.event.pull_request.user.avatar_url }}
-          title: ${{ github.event.pull_request.title }}
-          pull_request_url: ${{ github.event.pull_request.html_url }}
-          branch: ${{ github.event.pull_request.head.ref }}
-          repo: ${{ github.repository }}
+          # The webhook url for your Incoming Webhook connector
+          webhook: ${{secrets.TEAMSWEBHOOK_URL}}
+          # The message you want to send to your Microsoft Teams channel
+          message: format('Pull request generated for dependency updates dependabot Repository {0} {1} ', ${{ github.repository }},${{ github.event.pull_request.title }})     
