--- a/.github/workflows/dependabot.yml
+++ b/.github/workflows/dependabot.yml
@@ -7,6 +7,7 @@ on:
     types: [opened, synchronize]
 env:
   MY_WORKFLOW_VAR: 'Pull request generated for dependency updates dependabot Repository '
+  WH_URL: ${{secrets.TEAMSWEBHOOK_URL}}
 jobs:
   notify:
     runs-on: ubuntu-latest
@@ -17,6 +18,6 @@ jobs:
         uses: dhollerbach/actions.send-message-to-ms-teams@1.0.10
         with:
           # The webhook url for your Incoming Webhook connector
-          webhook: ${{secrets.TEAMSWEBHOOK_URL}}
+          webhook: ${{env.WH_URL}}
           # The message you want to send to your Microsoft Teams channel
           message: ${{ env.MY_WORKFLOW_VAR }} ${{ github.repository }}   
